welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:4: error: not found: value is
    if (is FacingTrail() = true) {
        ^SlugHunting:8: error: not found: value is
      if (is FacingTrail() = true) {
          ^