welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
  while (!estSurBiscuit()) {
    if (is FacingTrail() = true) {
      avance()
    } else {
      droite()
      if (is FacingTrail() = true) {
      	avance()
      } else {
        retourne()
      }
    }
  }
}


def isFacingTrail():Boolean = {
  if (!estFaceMur()) {
    avance()
    if (getCouleurSol() == Color.green) {
      recule()
      return true
    } else {
      recule()
      return false
    }
  } else {
    return false
  }
}